--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,9 @@
 	branch = wolverine
 [submodule "LLVM"]
 	path = LLVM
-	url = git@github.com:CMUAbstract/alpaca-pass-oopsla.git
+	url = https://github.com/CMUAbstract/alpaca-pass-oopsla
+#	url = git@github.com:CMUAbstract/alpaca-pass-oopsla.git
 [submodule "AlpacaRuntime/libalpaca"]
 	path = AlpacaRuntime/libalpaca
-	url = git@github.com:CMUAbstract/libalpaca-oopsla.git
+	url = https://github.com/CMUAbstract/libalpaca-oopsla
+#	url = git@github.com:CMUAbstract/libalpaca-oopsla.git
