--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
-[submodule "Mementos"]
-	path = Mementos
-	url = https://github.com/spqr/mementos.git
-	branch = wolverine
-[submodule "LLVM"]
-	path = LLVM
-	url = https://github.com/CMUAbstract/alpaca-pass-oopsla
+#[submodule "Mementos"]
+#	path = Mementos
+#	url = https://github.com/spqr/mementos.git
+#	branch = wolverine
+#[submodule "LLVM"]
+#	path = LLVM
+#	url = https://github.com/CMUAbstract/alpaca-pass-oopsla
 #	url = git@github.com:CMUAbstract/alpaca-pass-oopsla.git
 #[submodule "AlpacaRuntime/libalpaca"]
 #	path = AlpacaRuntime/libalpaca
