--- a/LLVM/src/CMakeLists.txt
+++ b/LLVM/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(AlpacaPass MODULE
+add_library(ChinchillaPass MODULE
 	# List your source files here.
 	dataflow.cpp
 	available-support.cpp
@@ -17,18 +17,18 @@ add_library(AlpacaPass MODULE
 	)
 
 # Use C++11 to compile our pass (i.e., supply -std=c++11).
-target_compile_features(AlpacaPass PRIVATE cxx_range_for cxx_auto_type)
+target_compile_features(ChinchillaPass PRIVATE cxx_range_for cxx_auto_type)
 
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
-set_target_properties(AlpacaPass PROPERTIES
+set_target_properties(ChinchillaPass PROPERTIES
 	COMPILE_FLAGS "-fno-rtti"
 	)
 
 # Get proper shared-library behavior (where symbols are not necessarily
 # resolved when the shared library is linked) on OS X.
 if(APPLE)
-	set_target_properties(AlpacaPass PROPERTIES
+	set_target_properties(ChinchillaPass PROPERTIES
 		LINK_FLAGS "-undefined dynamic_lookup"
 		)
 endif(APPLE)
